--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --blue : #0012DA;
     --red : #AB0000;
+    --black : rgba(24, 23, 23, 0.712);
 }
 
 
@@ -12,19 +13,129 @@
 
 
 body {
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #faf2f2;
+    background-color: #2c2c2c;
+    font-family: 'Poppins', sans-serif;
 }
 
 .card {
 
-background: linear-gradient(180deg, rgb(158, 10, 10) 31%, rgb(7, 26, 233) 100%);
+background: linear-gradient(180deg, rgba(158, 10, 10, 0.836) 20%, rgb(7, 26, 233) 100%);
 border-radius: 10px;
+padding: 0.5rem;
+width: 400px;
+box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
+
+.bg-profile {
+    background-image: url('public/bg-image.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 150px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    position: relative;
+}
+
+.bg-profile .img-profile img {
+    width: 100px;
+    height: 100px;
+    border: 4px solid rgba(158, 10, 10, 0.836);
+    border-radius: 100%;
+    position: absolute;
+    bottom: -40px;
+    left: 20px;
+}
+
+.img-profile .circle-green {
+    position: absolute;
+    bottom: -30px;
+    left: 100px;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 100%;
+    background-color: green;
+    z-index: 1;
+}
+.img-profile .circle-white {
+    position: absolute;
+    bottom: -31.4px;
+    left: 98.7px;
+    width: 1.3rem;
+    height: 1.3rem;
+    border-radius: 100%;
+    background-color: rgba(158, 10, 10, 0.836);
+    transform: translateY(0.4px);
+    z-index: 0;
+}
+
+.badge {
+    display: flex;
+    column-gap: 0.8rem;
+    margin-top: 2rem;
+    margin-left: auto;
+    transform: translateX(-20px);
+    justify-content: center;
+    background-color: rgb(24, 23, 23);
+    width: 90px;
+    /* height: 20px; */
+    padding: 0.7rem 3%;
+    border-radius: 10px;
+    
+}
+
+.container {
+    background-color: var(--black);
+    backdrop-filter: blur(10px);
+    padding: 1rem ;
+    margin : 0 1rem;
+    margin-top: 1rem;
+    border-radius: 10px;
+}
+
+.center-text {
+    margin-bottom: 0.8rem;
+}
+.container .center-text p {
+    margin-bottom: 0.7rem;
+    font-size: 0.9rem;
+}
+
+hr {
+    filter: opacity(0.3);
+}
+
+.about p.semi-bold {
+    margin-bottom: 0.5rem;
+}
+
+.about p.light {
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+}
+
+.discord-member p.light {
+    margin: 0.5rem 0;
+}
+
+
+
+/* .circle-green::before {
+    content: '';
+    position: absolute;
+    background-color: white;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 100%;
+    transform: translateY(-3px);
+    transform: translateX(-3px);
+    z-index: 0;
+} */
 
 
 
@@ -47,4 +158,13 @@ i.fa-gem {
 input.range {
  color: black;
  background-color: black;
+}
+
+
+.semi-bold {
+    font-weight: 600;
+}
+
+.light {
+    font-weight: 100;
 }
