--- a/style.css
+++ b/style.css
@@ -1,170 +1,243 @@
 :root {
-    --blue : #0012DA;
-    --red : #AB0000;
-    --black : rgba(24, 23, 23, 0.712);
+  --blue: #0012da;
+  --red: #ab0000;
+  --black: rgba(24, 23, 23, 0.712);
 }
-
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #faf2f2;
-    background-color: #2c2c2c;
-    font-family: 'Poppins', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #faf2f2;
+  background-color: #2c2c2c;
+  font-family: "Poppins", sans-serif;
 }
 
 .card {
-
-background: linear-gradient(180deg, rgba(158, 10, 10, 0.836) 20%, rgb(7, 26, 233) 100%);
-border-radius: 10px;
-padding: 0.5rem;
-width: 400px;
-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+  background: linear-gradient(
+    180deg,
+    rgba(158, 10, 10, 0.836) 20%,
+    rgb(7, 26, 233) 100%
+  );
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 400px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .bg-profile {
-    background-image: url('public/bg-image.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 150px;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    position: relative;
+  background-image: url("public/bg-image.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 150px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  position: relative;
 }
 
 .bg-profile .img-profile img {
-    width: 100px;
-    height: 100px;
-    border: 4px solid rgba(158, 10, 10, 0.836);
-    border-radius: 100%;
-    position: absolute;
-    bottom: -40px;
-    left: 20px;
+  width: 100px;
+  height: 100px;
+  border: 4px solid rgba(158, 10, 10, 0.836);
+  border-radius: 100%;
+  position: absolute;
+  bottom: -40px;
+  left: 20px;
 }
 
 .img-profile .circle-green {
-    position: absolute;
-    bottom: -30px;
-    left: 100px;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 100%;
-    background-color: green;
-    z-index: 1;
+  position: absolute;
+  bottom: -30px;
+  left: 100px;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  background-color: green;
+  z-index: 1;
 }
 .img-profile .circle-white {
-    position: absolute;
-    bottom: -31.4px;
-    left: 98.7px;
-    width: 1.3rem;
-    height: 1.3rem;
-    border-radius: 100%;
-    background-color: rgba(158, 10, 10, 0.836);
-    transform: translateY(0.4px);
-    z-index: 0;
+  position: absolute;
+  bottom: -31.4px;
+  left: 98.7px;
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 100%;
+  background-color: rgba(158, 10, 10, 0.836);
+  transform: translateY(0.4px);
+  z-index: 0;
 }
 
 .badge {
-    display: flex;
-    column-gap: 0.8rem;
-    margin-top: 2rem;
-    margin-left: auto;
-    transform: translateX(-20px);
-    justify-content: center;
-    background-color: rgb(24, 23, 23);
-    width: 90px;
-    /* height: 20px; */
-    padding: 0.7rem 3%;
-    border-radius: 10px;
-    
+  display: flex;
+  column-gap: 0.8rem;
+  margin-top: 2rem;
+  margin-left: auto;
+  transform: translateX(-20px);
+  justify-content: center;
+  background-color: rgb(24, 23, 23);
+  width: 90px;
+  /* height: 20px; */
+  padding: 0.7rem 3%;
+  border-radius: 10px;
 }
 
 .container {
-    background-color: var(--black);
-    backdrop-filter: blur(10px);
-    padding: 1rem ;
-    margin : 0 1rem;
-    margin-top: 1rem;
-    border-radius: 10px;
+  background-color: var(--black);
+  backdrop-filter: blur(10px);
+  padding: 1rem;
+  margin: 0 1rem;
+  margin-top: 1rem;
+  border-radius: 10px;
 }
 
 .center-text {
-    margin-bottom: 0.8rem;
+  margin-bottom: 0.8rem;
 }
 .container .center-text p {
-    margin-bottom: 0.7rem;
-    font-size: 0.9rem;
+  margin-bottom: 0.7rem;
+  font-size: 0.9rem;
 }
 
 hr {
-    filter: opacity(0.3);
+  filter: opacity(0.3);
 }
 
 .about p.semi-bold {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .about p.light {
-    font-size: 0.9rem;
-    margin-bottom: 1rem;
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
 }
 
 .discord-member p.light {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
 
+.img-text {
+  display: flex;
+  /* grid-template-columns: 40% 50%; */
+  font-size: 0.8rem;
+  column-gap: 10px;
+}
 
+.img-text img {
+  object-fit: cover;
+  width: 50%;
+}
 
-/* .circle-green::before {
-    content: '';
-    position: absolute;
-    background-color: white;
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 100%;
-    transform: translateY(-3px);
-    transform: translateX(-3px);
-    z-index: 0;
-} */
+.img-text .description {
+  padding: 0.5rem 0;
+  width: 50%;
+}
 
+.song-time input {
+  width: 100%;
+}
 
+input[type="range"] {
+  width: 100%; /* Sesuaikan lebar slider sesuai kebutuhan */
+  -webkit-appearance: none;
+  margin: 10px 0;
+  border-radius: 5px;
+  background: #d3d3d3; /* Warna latar belakang slider */
+}
+
+/* Gaya untuk track slider */
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px; /* Sesuaikan tinggi track slider */
+  cursor: pointer;
+  background: #393a39; /* Warna track slider */
+  border-radius: 5px;
+}
+
+/* Gaya untuk thumb/slider handle */
+input[type="range"]::-webkit-slider-thumb {
+  height: 20px; /* Sesuaikan tinggi thumb/slider handle */
+  width: 20px; /* Sesuaikan lebar thumb/slider handle */
+  background: #d5e4d5; /* Warna thumb/slider handle */
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -6px;
+}
+
+.current {
+  float: left;
+}
+
+.time {
+  /* display: inline-block; */
+  text-align: end;
+}
+
+.spotify-card {
+  position: relative;
+}
+
+.spotify-card .fa-spotify {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: 1.5rem;
+}
+
+.song-time {
+  margin-bottom: 1rem;
+}
+
+.btn-spotify,
+.btn-user {
+  background-color: var(--red);
+  color: #d3d3d3;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.btn-spotify {
+  padding: 0.5rem 3rem;
+}
+
+.btn-user {
+  padding: 0.5rem 1rem;
+}
 
 i.fa-spotify {
-    color: rgb(4, 207, 4);
+  color: rgb(4, 207, 4);
 }
 
 i.fa-play {
-    color: purple;
+  color: purple;
 }
 
 i.fa-boostrap {
-    color: gray;
+  color: gray;
 }
 
 i.fa-gem {
-    color: violet;
+  color: violet;
 }
 
 input.range {
- color: black;
- background-color: black;
+  color: black;
+  background-color: black;
 }
 
-
 .semi-bold {
-    font-weight: 600;
+  font-weight: 500;
 }
 
 .light {
-    font-weight: 100;
+  font-weight: 100;
 }
