--- a/style.css
+++ b/style.css
@@ -205,13 +205,30 @@ input[type="range"]::-webkit-slider-thumb {
   font-size: 1rem;
 }
 
+.btn-spotify:hover,
+.btn-user:hover {
+  background-color: #ab0000ad;
+}
+
 .btn-spotify {
   padding: 0.5rem 3rem;
+  margin-left: 1rem;
 }
 
 .btn-user {
   padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
 }
+
+input.light {
+  display: block;
+  background: none;
+  border: none;
+  padding: 0.6rem ;
+  color: white;
+}
+
+
 
 i.fa-spotify {
   color: rgb(4, 207, 4);
